--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "node src/app.js"
+    "dev": "tsx watch src/app.ts",
+    "build": "tsc",
+    "start": "node dist/src/app.js"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.12",
+    "tsx": "^4.11.0",
+    "typescript": "^5.4.5"
   }
 }
