--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/app.ts",
     "build": "tsc",
-    "start": "node dist/src/app.js"
+    "start": "node dist/src/app.js",
+    "format": "prettier src --write"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
@@ -16,6 +17,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "tsx": "^4.11.0",
+    "prettier": "3.2.5",
     "typescript": "^5.4.5"
   }
 }
