--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
     "dev": "tsx watch src/app.ts",
     "build": "tsc",
     "start": "node dist/src/app.js",
-    "format": "prettier src --write"
+    "format": "prettier src --write",
+    "lint": "eslint src"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "tsx": "^4.11.0",
+    "eslint": "9.x",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.3.0",
     "prettier": "3.2.5",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.10.0"
   }
 }
