--- a/package.json
+++ b/package.json
@@ -8,20 +8,24 @@
     "build": "tsc",
     "start": "node dist/src/app.js",
     "format": "prettier src --write",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "migrate": "node-pg-migrate"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.3.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "tsx": "^4.11.0",
+    "@types/pg": "^8.11.6",
     "eslint": "9.x",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.3.0",
+    "node-pg-migrate": "^7.3.2",
     "prettier": "3.2.5",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.10.0"
