--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "tsx watch src/app.ts",
+    "debug": "tsx src/cli.ts",
     "build": "tsc",
     "start": "node dist/src/app.js",
     "format": "prettier src --write",
