--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "fatten-up-plan",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "node src/app.js"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
+  }
 }
