--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "migrate": "node-pg-migrate"
   },
   "dependencies": {
+    "@line/bot-sdk": "^9.2.2",
     "dayjs": "^1.11.11",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
