--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node dist/src/app.js",
     "format": "prettier src --write",
     "lint": "eslint src",
+    "test": "jest",
     "migrate": "node-pg-migrate"
   },
   "dependencies": {
@@ -22,13 +23,16 @@
   "devDependencies": {
     "@eslint/js": "^9.3.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
     "@types/pg": "^8.11.6",
     "eslint": "9.x",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.3.0",
+    "jest": "^29.7.0",
     "node-pg-migrate": "^7.3.2",
     "prettier": "3.2.5",
+    "ts-jest": "^29.1.5",
     "tsx": "^4.11.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.10.0"
