--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Build code
       run: yarn build
     - name: Run DB migration
-      run: DATABASE_URL=${{ secrets.DATABASE_URL }} yarn migrate up
+      run: DATABASE_URL=${{ secrets.DATABASE_URL }}?sslmode=require yarn migrate up
