--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,3 +33,5 @@ jobs:
       run: yarn test
     - name: Build code
       run: yarn build
+    - name: Run db migration
+      run: DATABASE_URL=${{ secrets.DATABASE_URL }} yarn migrate up
