--- a/.github/workflows/staging-CI.yml
+++ b/.github/workflows/staging-CI.yml
@@ -5,7 +5,7 @@ name: staging CI
 on:
   push:
     branches:
-      - develop
+      - bigface030-move-migration-command
 
 jobs:
   build:
@@ -33,5 +33,3 @@ jobs:
         run: yarn test
       - name: Build code
         run: yarn build
-      - name: Run db migration
-        run: DATABASE_URL=${{ secrets.DATABASE_URL }} yarn migrate up --reject-unauthorized=false
